<resources>
    <string name="app_name">GGexpress </string>
    <string name="app_name1">GGexpress </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu item texts -->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_home">Home</string>
    <string name="action_orders">Orders</string>
    <string name="action_support">Support</string>

    <string name="item_1">Offers</string>
    <string name="item_2">Electronics</string>
    <string name="item_3">Lifestyle</string>
    <string name="item_4">Home Appliances</string>
    <string name="item_5">Books \u0026 More</string>
    <string name="item_6">More</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="new_address">Add a new Address</string>
    <string name="payment">Payment</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>

    <string name="search_hint">Search for Products, Brands and More</string>

    <string name="prompt_username">User Name</string>
    <string name="prompt_mobile_no">Mobile No</string>
    <string name="prompt_otp">OTP</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_get_otp">Get OTP</string>
    <string name="action_log_out">Logout</string>
    <string name="action_update_out">Update</string>
    <string name="action_save">Save</string>
    <string name="action_submit">Submit</string>
    <string name="action_change_pass">Change Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <!--Intro slider texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Groceries!</string>
    <string name="slide_5_desc">The easiest way to order cheap and fresh Groceries at your finger tip !</string>

    <string name="slide_2_title">Cheap Rates</string>
    <string name="slide_2_desc">Products at such an affordable rates !</string>

    <string name="slide_3_title">Payments</string>
    <string name="slide_3_desc">With various pay options , you can easily pay in a minute !</string>

    <string name="slide_4_title">Delivery</string>
    <string name="slide_4_desc">Fast delivery at your doorstep!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_all_items_show">AllItemsShowActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_help_center">Help Center</string>
    <string name="title_activity_order">Orders</string>
    <string name="title_activity_order_details">Order Details</string>
    <string name="title_activity_sign_up">Registration</string>

</resources>
