<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_home"
          android:title="@string/action_home"
          app:showAsAction="always"
          android:icon="@drawable/ic_home_white_24dp"/>
    <item android:id="@+id/action_order"
          android:title="@string/action_orders"
          app:showAsAction="always"
          android:icon="@drawable/ic_shopping_basket_white_24dp"/>
    <item android:id="@+id/action_cart"
          android:title="@string/action_cart"
          app:showAsAction="always"
          android:icon="@drawable/ic_menu_notifications"/>

    <item android:id="@+id/action_support"
          android:title="@string/action_support"
          app:showAsAction="always"
          android:icon="@drawable/ic_local_phone_white_24dp"/>
</menu>