<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ggexpress.gavin.startup.LoginPageActivity">

    <ScrollView
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="134dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:padding="20dp">

            <!-- Login progress -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="40dp"
                app:srcCompat="@drawable/ggexpress" />

            <LinearLayout
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/vertical_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/mobile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/nav_header_height"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="center"
                        app:srcCompat="@drawable/mobile_phone_24dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_mobile"
                        android:layout_width="274dp"
                        android:layout_height="wrap_content"
                        app:prefixText="+592">

                        <EditText
                            android:id="@+id/mobile_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/prompt_mobile_no"
                            android:inputType="phone"
                            android:maxLength="7"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/sign_in_button"

                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="30dp"
                    android:background="@drawable/selectable_button_anim"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/action_sign_in"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_medium"
                    android:gravity="center_horizontal"
                    android:onClick="newRegistration"
                    android:text="Not a member ? Register"
                    android:textSize="@dimen/text_size_xmedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/otp_verify_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/vertical_margin"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/otp_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/otpiv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="center"
                        app:srcCompat="@drawable/ic_lock_green_24dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_otp"
                        android:layout_width="274dp"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/otpEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/prompt_otp"
                            android:inputType="numberPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="@dimen/text_size_large" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/go_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:onClick="signUpPage"
                    android:text="Go Back" />

                <Button
                    android:id="@+id/verify_button"
                    style="?android:selectableItemBackground"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="30dp"
                    android:background="@drawable/round_button_primary"
                    android:fontFamily="sans-serif"
                    android:text="Veirfy and Login"
                    android:textAllCaps="false"
                    android:textColor="@color/gen_white"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
